crates/sentinel-driver/tests/snapshots/ui__c21_ref_in_class_field_delegate.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c21_ref_in_class_field_delegate.sentinel\")"
---
sentinel::types::ref_in_class_field

  × references in class fields are not allowed at C2
    ╭─[tests/ui/c21_ref_in_class_field_delegate.sentinel:26:21]
 25 │ class Holder {
 26 │     delegate inner: &Inner to Peek;
    ·                     ───┬──
    ·                        ╰── 
 27 │     init(i: &Inner) {
    ╰────
