crates/sentinel-driver/tests/snapshots/ui__c21_ref_in_effect_op_param.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c21_ref_in_effect_op_param.sentinel\")"
---
sentinel::types::ref_in_effect_signature

  × references are not allowed in an effect operation's signature
   ╭─[tests/ui/c21_ref_in_effect_op_param.sentinel:7:14]
 6 │ effect Io {
 7 │     write(r: &i64) -> i64;
   ·              ──┬─
   ·                ╰── 
 8 │ }
   ╰────
