crates/sentinel-driver/tests/snapshots/ui__c21_scope_tail_local_ref.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c21_scope_tail_local_ref.sentinel\")"
---
sentinel::borrow::returns_local_ref

  × function `leak` returns a reference to local `v`
   ╭─[tests/ui/c21_scope_tail_local_ref.sentinel:3:5]
 2 │     let v: i64 = 5;
 3 │     scope concurrent { &v }
   ·     ───────────┬───────────
   ·                ╰── 
 4 │ }
   ╰────
