crates/sentinel-driver/tests/snapshots/ui__c21_secret_ref_return_local.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c21_secret_ref_return_local.sentinel\")"
---
sentinel::borrow::returns_local_ref

  × function `leak` returns a reference to local `v`
   ╭─[tests/ui/c21_secret_ref_return_local.sentinel:1:44]
 1 │ fn leak() -> secret &i64 { let v: i64 = 9; &v }
   ·                                            ─┬
   ·                                             ╰── 
 2 │ fn main() -> i64 { let r: secret &i64 = leak(); let p: &i64 = declassify(r); *p }
   ╰────
