crates/sentinel-driver/tests/snapshots/ui__c22_ref_out_of_block_then_push.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c22_ref_out_of_block_then_push.sentinel\")"
---
sentinel::borrow::mutable_borrow_of_shared

  × cannot take `&mut v` while it is already borrowed shared
   ╭─[tests/ui/c22_ref_out_of_block_then_push.sentinel:6:10]
 5 │     let q: &i64 = { let p: &i64 = &v[0]; p };
 6 │     push(&mut v, 6);
   ·          ───┬──
   ·             ╰── 
 7 │     *q
   ╰────
